# fortran-sigwatch

./: CMakeLists.txt  CMakePresets.json  README.md  example_unix.f90  example_windows.f90  sigwatch.c
.github/workflows/: ci.yml  ci_cmake.yml  intel-oneapi.yml
cmake/: compilers.cmake
example/: example_unix.f90  example_windows.f90  unix.c  unix.f90  win32.c  win32.f90
examples/: CMakeLists.txt  example_unix.f90  example_windows.f90
include/: sigwatch.h
src/: sigwatch.c  sleep.c
src/tests/: CMakeLists.txt  test_fork_interrupt.sh
test/: test_sigwatch.py  test_sigwatch.sh
